Fixed user card alignment.

--- a/Styles/MetricsDisplayApp.scss
+++ b/Styles/MetricsDisplayApp.scss
@@ -14,6 +14,7 @@ $lightGray: #ced2d5;
 }
 
 .userPanel {
+	text-align: left;
 	border: 5px solid #000;
 	width: 330px;
 	height: 200px;
